--- a/assets/css/live-resume.css
+++ b/assets/css/live-resume.css
@@ -7481,20 +7481,148 @@ aside .widget {
       color: #0067f6; }
 
 .btn-share {
-  padding: 5px 25px;
-  border: 0;
-  border-radius: 15px;
-  font-size: 0.75rem;
-  font-weight: 500;
-  line-height: 1.67;
-  height: 30px; }
-  .btn-share:hover, .btn-share:focus, .btn-share:active {
-    background-color: #ffffff;
-    border: 0; }
-  .btn-share:focus {
-    box-shadow: none; }
-  .btn-share:hover {
-    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2); }
+  
+  position: relative;
+  border: none;
+  background: #fff;
+  color: #0067f6;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  padding-top: 2.5px;
+  padding-right: 2px;
+  cursor: pointer;
+  z-index: 2;
+
+}
+.share-options{
+  position: absolute;
+  bottom: 62%;
+  left: 40%;
+  width: auto;
+  height: auto;
+  transform-origin: bottom left;
+  transform: scale(0);
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background: rgba(15, 15, 15, 0.5);
+  color: #fff;
+  padding: 20px;
+  font-family: "Mukta", sans-serif;
+  transition: .5s;
+  transition-delay: .5s;;
+}
+
+.share-options.active{
+  transform: scale(1);
+  transition-delay: 0s;
+}
+
+.title{
+  opacity: 0;
+  transition: .5s;
+  transition-delay: 0s;
+  font-size: 14px;
+  text-transform: capitalize;
+  border-bottom: 1px solid #fff;
+  width: fit-content;
+  padding: 0 20px 3px 0;
+}
+
+.social-media{
+  opacity: 0;
+  transition: .5s;
+  transition-delay: 0s;
+  width: 250px;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 10px 0;
+}
+
+.social-media-btn{
+  border: none;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #000;
+  color: #fff;
+  line-height: 50px;
+  font-size: 25px;
+  cursor: pointer;
+  margin: 0 5px;
+  text-align: center;
+}
+
+.social-media-btn:nth-child(1){
+  background: #FFA654;
+}
+
+.social-media-btn:nth-child(2){
+  background: #25D366;
+}
+
+.social-media-btn:nth-child(3){
+  background: #E4405F;
+}
+
+.social-media-btn:nth-child(4){
+  background: #1DA1F2;
+}
+
+.social-media-btn:nth-child(5){
+  background: #1877F2;
+}
+
+.social-media-btn:nth-child(6){
+  background: #0A66C2;
+}
+
+.link-container{
+  opacity: 80%;
+  background: #fff;
+  transition: .5s;
+  transition-delay: 0s;
+  width: 100%;
+  position: relative;
+  height: 26px;
+  display: flex;
+  align-items: center;
+  border-radius: 40px;
+  background-color: #fff;
+  overflow: hidden;
+  padding: 0 10px;
+}
+
+.link{
+  width: 80%;
+  height: 100%;
+  line-height: 40px;
+  color: #000;
+}
+
+.copy-btn{
+  position: absolute;
+  right: 0;
+  cursor: pointer;
+  background: #000;
+  color: #fff;
+  border: none;
+  height: 100%;
+  width: 30%;
+  text-transform: capitalize;
+  font-size: 16px;
+}
+
+.share-options.active .title,
+.share-options.active .social-media,
+.share-options.active .link-container{
+  opacity: 1;
+  transition: .5s;
+  transition-delay: .5s;
+}
 
 .btn-img {
   height: 10px;
@@ -7543,6 +7671,8 @@ header {
   transition: width 0.6s ease-in-out; }
   .collapsible-nav.show {
     width: 365px; }
+
+    
   @media (max-width: 991px) {
     .collapsible-nav {
       position: fixed;
