--- a/assets/css/live-resume.css
+++ b/assets/css/live-resume.css
@@ -4697,156 +4697,6 @@ a.close.disabled {
   padding: 0.5rem 0.75rem;
   color: #000000; }
 
-.carousel {
-  position: relative; }
-
-.carousel.pointer-event {
-  touch-action: pan-y; }
-
-.carousel-inner {
-  position: relative;
-  width: 100%;
-  overflow: hidden; }
-  .carousel-inner::after {
-    display: block;
-    clear: both;
-    content: ""; }
-
-.carousel-item {
-  position: relative;
-  display: none;
-  float: left;
-  width: 100%;
-  margin-right: -100%;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  transition: transform 0.6s ease-in-out; }
-  @media (prefers-reduced-motion: reduce) {
-    .carousel-item {
-      transition: none; } }
-
-.carousel-item.active,
-.carousel-item-next,
-.carousel-item-prev {
-  display: block; }
-
-.carousel-item-next:not(.carousel-item-left),
-.active.carousel-item-right {
-  transform: translateX(100%); }
-
-.carousel-item-prev:not(.carousel-item-right),
-.active.carousel-item-left {
-  transform: translateX(-100%); }
-
-.carousel-fade .carousel-item {
-  opacity: 0;
-  transition-property: opacity;
-  transform: none; }
-
-.carousel-fade .carousel-item.active,
-.carousel-fade .carousel-item-next.carousel-item-left,
-.carousel-fade .carousel-item-prev.carousel-item-right {
-  z-index: 1;
-  opacity: 1; }
-
-.carousel-fade .active.carousel-item-left,
-.carousel-fade .active.carousel-item-right {
-  z-index: 0;
-  opacity: 0;
-  transition: opacity 0s 0.6s; }
-  @media (prefers-reduced-motion: reduce) {
-    .carousel-fade .active.carousel-item-left,
-    .carousel-fade .active.carousel-item-right {
-      transition: none; } }
-
-.carousel-control-prev,
-.carousel-control-next {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 15%;
-  color: #ffffff;
-  text-align: center;
-  opacity: 0.5;
-  transition: opacity 0.15s ease; }
-  @media (prefers-reduced-motion: reduce) {
-    .carousel-control-prev,
-    .carousel-control-next {
-      transition: none; } }
-  .carousel-control-prev:hover, .carousel-control-prev:focus,
-  .carousel-control-next:hover,
-  .carousel-control-next:focus {
-    color: #ffffff;
-    text-decoration: none;
-    outline: 0;
-    opacity: 0.9; }
-
-.carousel-control-prev {
-  left: 0; }
-
-.carousel-control-next {
-  right: 0; }
-
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: no-repeat 50% / 100% 100%; }
-
-.carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23ffffff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e"); }
-
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23ffffff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e"); }
-
-.carousel-indicators {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 15;
-  display: flex;
-  justify-content: center;
-  padding-left: 0;
-  margin-right: 15%;
-  margin-left: 15%;
-  list-style: none; }
-  .carousel-indicators li {
-    box-sizing: content-box;
-    flex: 0 1 auto;
-    width: 30px;
-    height: 3px;
-    margin-right: 3px;
-    margin-left: 3px;
-    text-indent: -999px;
-    cursor: pointer;
-    background-color: #ffffff;
-    background-clip: padding-box;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    opacity: .5;
-    transition: opacity 0.6s ease; }
-    @media (prefers-reduced-motion: reduce) {
-      .carousel-indicators li {
-        transition: none; } }
-  .carousel-indicators .active {
-    opacity: 1; }
-
-.carousel-caption {
-  position: absolute;
-  right: 15%;
-  bottom: 20px;
-  left: 15%;
-  z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: #ffffff;
-  text-align: center; }
 
 @-webkit-keyframes spinner-border {
   to {
@@ -7480,26 +7330,22 @@ aside .widget {
     aside .widget.card .widget-title {
       color: #0067f6; }
 
-#target {
-  width:100px;
-  height:100px;
-  border:1px solid #ccc;
-      }
+
 
 .btn-share {
   
   position: relative;
   border: none;
-  background: #fff;
+  background: none;
   color: #0067f6;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  font-size: 30px;
-  padding-top: 2.5px;
+  border-radius: 100%;
+  width: none;
+  height: none;
+  font-size: 18px;
+  padding-top: 10px;
   padding-right: 2px;
   cursor: pointer;
-  z-index: 2;
+  z-index: 1;
 
 }
 .share-options{
@@ -7510,7 +7356,7 @@ aside .widget {
   height: auto;
   transform-origin: bottom;
   transform: scale(0);
-  border-top-left-radius: 20px;
+  border-top-left-radius: 50px;
   border-bottom-right-radius: 20px;
   background: rgba(15, 15, 15, 0.5);
   color: #fff;
@@ -7529,7 +7375,7 @@ aside .widget {
   opacity: 0;
   transition: .5s;
   transition-delay: 0s;
-  font-size: 14px;
+  font-size: 16px;
   text-transform: capitalize;
   border-bottom: 1px solid #fff;
   width: fit-content;
@@ -7627,7 +7473,7 @@ aside .widget {
 .share-options.active .title,
 .share-options.active .social-media,
 .share-options.active .link-container{
-  opacity: 1;
+  opacity: 2;
   transition: .5s;
   transition-delay: .5s;
 }
@@ -7854,7 +7700,7 @@ main {
     margin-bottom: 34px; }
   main .service-card {
     padding-top: 11px;
-    padding-bottom: 11px; }
+    padding-bottom: 20px; }
     main .service-card:first-child, main .service-card:nth-child(3) {
       border-right: 1px solid #f3f3f3; }
       @media (max-width: 991px) {
